added more functionality

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ db.sqlite3-journal
 # Environment variables
 .env
 .env.local
+.env.production
+.env.staging
 
 # IDE
 .vscode/
@@ -61,3 +63,17 @@ htmlcov/
 
 # MyPy
 .mypy_cache/
+
+# Production logs
+logs/
+*.log.*
+
+# Database backups
+backups/
+*.dump
+*.dump.gz
+*.sql.gz
+
+# Temporary files
+*.tmp
+*.bak
