--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,8 @@ psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 markdown==3.5.1
 
+# Production dependencies
+dj-database-url==2.1.0
+sentry-sdk==1.38.0
+python-magic==0.4.27
+
